# dw-probe-structure-vs-readme

./: README.md  pyproject.toml
docs/: architecture.md  troubleshooting.md
src/: __init__.py
src/ingestion/: __init__.py  format_detector.py  zynoflux_reader.py
src/orchestration/: pipeline_runner.py
src/output/: __init__.py  report_generator.py  sink_manager.py
src/transformation/: __init__.py  krandel_normalizer.py  phloxite_enricher.py
src/validation/: __init__.py  anomaly_detector.py  schema_validator.py
tests/: test_pipeline_e2e.py  test_zynoflux_reader.py
