[project]
name = "zynoflux-pipeline"
version = "2.1.0"
description = "ZynofluxProcessor: A multi-stage data pipeline framework for ingestion, transformation, validation, and output of structured data streams"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "jsonschema>=4.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
